fix: make gap between checkbox elements with CSS

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,3 +22,7 @@
   color: #888;
   text-align: center;
 }
+
+.checkboxContainer {
+  gap: 10px;
+}
